[fix] category on homepage blog

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -143,6 +143,11 @@ const routeLang = getRoutePrefixForLang(lang);
 				<Sidebar client:load />
 		  </div>
 		</main>
-		<FooterPlexicus client:only={true} />
-  </body>
+		<ReadingProgress />
+		
+
+		
+
+		<FooterPlexicus client:only />
+	</body>
 </html>
