--- a/src/pages/en/[...slug].astro
+++ b/src/pages/en/[...slug].astro
@@ -1,17 +1,17 @@
 ---
-import { getCollection, render } from 'astro:content';
-import BlogPost from '@/layouts/BlogPost.astro';
-import {processStaticPaths} from '@/lib/process-static-paths'
-import type { CollectionEntry } from 'astro:content';
+import { getCollection, render } from "astro:content";
+import BlogPost from "@/layouts/BlogPost.astro";
+import { processStaticPaths } from "@/lib/process-static-paths";
+import type { CollectionEntry } from "astro:content";
 
 export async function getStaticPaths() {
-  const pages = await getCollection('blog');
+  const pages = await getCollection("blog");
 
-  const paths = processStaticPaths({pages})
+  const paths = processStaticPaths({ pages, lang: "en" });
 
   return paths;
 }
-const page: CollectionEntry<'blog'> = Astro.props;
+const page: CollectionEntry<"blog"> = Astro.props;
 const { Content } = await render(page);
 ---
 
