--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -11,27 +11,27 @@ import FeaturedArticles from "@/components/home/featured";
 import LatestArticles from "@/components/home/latest";
 const lang = getLangFromUrl(Astro.url);
 const posts = (await getCollection("blog")).sort(
-	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
+  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
 ).filter((content) => {
-	return getLangFromPathname(`/${content.id}`) === lang
+  return getLangFromPathname(`/${content.id}`) === lang;
 });
-const t = useTranslations(lang)
+const t = useTranslations(lang);
 ---
 
 <!doctype html>
-<html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body>
-		<NavbarPlexicus
-			client:load
-			lang={lang}
-			fullSiteUrl={`${SITE_URL}:${SITE_PORT}`}
-		/>
-		<HeroMain/>
-		<FeaturedArticles featuredPosts={posts.slice(0,3)} />
-		<LatestArticles client:load blogPosts={posts}/>
-		<FooterPlexicus client:only />
-	</body>
+<html lang={lang}>
+  <head>
+    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+  </head>
+  <body>
+    <NavbarPlexicus
+      client:load
+      lang={lang}
+      fullSiteUrl={`${SITE_URL}:${SITE_PORT}`}
+    />
+    <HeroMain/>
+    <FeaturedArticles featuredPosts={posts.slice(0,3)} />
+    <LatestArticles client:load blogPosts={posts}/>
+    <FooterPlexicus client:only={true} />
+  </body>
 </html>
