--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -1,17 +1,17 @@
 ---
-import { getCollection, render } from 'astro:content';
-import BlogPost from '@/layouts/BlogPost.astro';
-import {processStaticPaths} from '@/lib/process-static-paths'
-import type { CollectionEntry } from 'astro:content';
+import { getCollection, render } from "astro:content";
+import BlogPost from "@/layouts/BlogPost.astro";
+import type { CollectionEntry } from "astro:content";
+import { generateLocalizedPaths } from "@/i18n/utils";
+
 
 export async function getStaticPaths() {
-  const pages = await getCollection('blog');
-
-  const paths = processStaticPaths({pages})
-
+  const pages = await getCollection("blog");
+  // can’t reference anything from its parent scope https://docs.astro.build/en/reference/routing-reference/#getstaticpaths
+  const paths = generateLocalizedPaths({ pages });
   return paths;
 }
-const page: CollectionEntry<'blog'> = Astro.props;
+const page: CollectionEntry<"blog"> = Astro.props;
 const { Content } = await render(page);
 ---
 
