--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import BaseHead from "@/components/BaseHead.astro";
 import { getLangFromUrl, useTranslations, getLangFromPathname } from "@/i18n/utils";
-import { SITE_TITLE, SITE_DESCRIPTION } from "@/consts";
-import { SITE_URL, SITE_PORT } from "astro:env/client";
+import { SITE_TITLE, SITE_DESCRIPTION, } from "@/consts";
+import { SITE_URL, SITE_PORT,BLOG_SITE_URL ,BLOG_PORT} from "astro:env/client";
 import "@/styles/global.css";
 import { getCollection } from "astro:content";
 import { NavbarPlexicus, FooterPlexicus } from "shared-ui";
@@ -28,10 +28,13 @@ const t = useTranslations(lang);
       client:load
       lang={lang}
       fullSiteUrl={`${SITE_URL}:${SITE_PORT}`}
+      fullBlogUrl={`${BLOG_SITE_URL}:${BLOG_PORT}`}
+
     />
     <HeroMain/>
     <FeaturedArticles featuredPosts={posts.slice(0,3)} />
     <LatestArticles client:load blogPosts={posts}/>
-    <FooterPlexicus client:only={true} />
+    <FooterPlexicus client:only={true}  fullSiteUrl={`${SITE_URL}:${SITE_PORT}`}
+    fullBlogUrl={`${BLOG_SITE_URL}:${BLOG_PORT}`}/>
   </body>
 </html>
