--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -239,3 +239,19 @@ body {
   background-color: #7c3aed; /* Darker violet on hover */
 }
 @import "tailwindcss/preflight.css" layer(base);
+
+@theme inline {
+  --animate-aurora: aurora 60s linear infinite;
+  @keyframes aurora {
+    from {
+      background-position:
+        50% 50%,
+        50% 50%;
+    }
+    to {
+      background-position:
+        350% 50%,
+        350% 50%;
+    }
+  }
+}
